# shoppin-spider

./: Dockerfile  README.md  main.py  mock.py  pyproject.toml
src/api/: crud.py
src/core/: crawler.py  utils.py
src/core/models/: crawled_data.py
